[project]
name = "tweetpipeline-license-server"
version = "2.0.0"
description = "Tweet Pipeline Pro final Supabase license server"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "requests>=2.32.0",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30.0"
]

[tool.vercel]
entrypoint = "license_server:app"
